Mudanças dos prototipos de tela

--- a/beersomm/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/beersomm/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -7,7 +7,6 @@
 
 	<h:head>
 		<meta http-equiv="Content-Type " content="text/html; charset=UTF-8" />
-		<link rel="stylesheet" href="resources/css/estilos.css" />
 		<title><ui:insert name="titulo"></ui:insert>Sistema BeerSomm</title>
 		<h:outputStylesheet library="css" name="sistema.css" />
 	</h:head>
@@ -16,7 +15,7 @@
 		<header>
 		<div>
 			<h:link>
-				<h:graphicImage library="images" name="logo_beersomm.png" />
+				<h:graphicImage library="images" name="Arte_Final111.png" />
 			</h:link>
 		</div>
 		</header>
